fixed services texts on small screens

--- a/src/pages/Services/index.scss
+++ b/src/pages/Services/index.scss
@@ -59,6 +59,7 @@
             }
             .service-title {
                 color: $primary-color;
+                text-align: center;
                 margin-bottom: 12px;
             }
         }
